fix post-r3f-init scrollbar resize bug

--- a/website/pages/Home/Home.styles.module.css
+++ b/website/pages/Home/Home.styles.module.css
@@ -276,6 +276,7 @@
 .fps {
   text-align: left;
   height: 30px;
+  width: 41px; /* content-based */
   display: flex;
   flex-wrap: nowrap;
   justify-content: flex-start;
